--- a/doc/paper/implementations.tex
+++ b/doc/paper/implementations.tex
@@ -5,7 +5,7 @@
 % - Conclusions belong to the Results/Conclusion sections
 
 This section discusses our attempts at implementing the different approaches
-described in section \ref{sec:approaches}. While we won't go over every single
+described in section~\ref{sec:approaches}. While we won't go over every single
 line of our code, we will still give detailed insight into our implementations
 in this section.
 
