--- a/doc/paper/nips2014.tex
+++ b/doc/paper/nips2014.tex
@@ -6,6 +6,7 @@
 \usepackage{url}
 \usepackage{amsmath}
 \usepackage{tikz}
+\usepackage{enumitem}
 \tikzset{add reference/.style={insert path={%
 coordinate [pos=0,xshift=-0.5\pgflinewidth,yshift=-0.5\pgflinewidth] (#1 south
 west)
