--- a/doc/paper/problem.tex
+++ b/doc/paper/problem.tex
@@ -1,5 +1,5 @@
 \section{Problem Statement}
 
-The goal of our work is to build a program that computes the rank$_k$ approximation of an arbitrary matrix. In the first step, we want to create a program with Apache Flink that runs the Lanczos algorithm in a scalable way for large matrices. After that the intermediate results are passed to an existing solver for eigendecomposition of the Apache Mahout library.
+The goal of our work is to build a program that computes the reduced SDV or rank$_k$ approximation of an arbitrary matrix. In the first step, we want to create a program with Apache Flink that runs the Lanczos algorithm in a scalable way for large matrices. After that the intermediate results are passed to an existing solver for eigendecomposition of the Apache Mahout library.
 
 We do not aim to analyze a specific dataset or to draw any domain specific conclusions. We rather want to create a generic tool.
