--- a/doc/paper/references.tex
+++ b/doc/paper/references.tex
@@ -21,3 +21,5 @@ Flink meetup Berlin on November 18, 2014.
 [5] The Wikimedia Foundation: {\it Lanczos Algorithm}. Wikipedia article.
 \url{https://en.wikipedia.org/wiki/Lanczos_algorithm}. (Fetched on \today).
 }
+
+[6] Anand Rajaraman and Jeffrey David Ullman. 2011. Mining of Massive Datasets. Cambridge University Press, New York, NY, USA.
