--- a/doc/paper/approaches.tex
+++ b/doc/paper/approaches.tex
@@ -119,7 +119,10 @@ algorithm works as well as for inspiration purposes. Eventually we started to
 consider reusing this existing implementation to run the Lanczos algorithm in
 Flink.
 
-The Mahout Lanczos solver is generic in a way that it only relies on two java interfaces: \texttt{Vector} and \texttt{Matrix}. By implementing these two interfaces with Apache Flink we could use the Mahout Lanczos solver and wouldn't need to implement it from scratch. 
+The Mahout Lanczos solver is generic in a way that it only relies on two java
+interfaces: \texttt{Vector} and \texttt{Matrix}. By implementing these two
+interfaces with Apache Flink we could use the Mahout Lanczos solver and
+wouldn't need to implement it from scratch.
 
 % Brief description of Mahout approach
 % ------------------------------------
